# opengrm_ngram

./: .gitmodules  AUTHORS  CMakeLists.txt  Makefile.in  NEWS  README  README.md  configure  configure.ac
src/: Makefile.in
src/include/: Makefile.in
src/include/ngram/: hist-arc.h  hist-mapper.h  ngram-bayes-model-merge.h  ngram-complete.h  ngram-context-merge.h  ngram-context-prune.h  ngram-context.h  ngram-count-of-counts.h  ngram-count-prune.h  ngram-count.h  ngram-input.h  ngram-list-prune.h  ngram-make.h  ngram-merge.h  ngram-model.h  ngram-mutable-model.h  ngram-output.h  ngram-randgen.h  ngram-shrink.h  ngram-split.h  ngram-transfer.h  util.h
src/lib/: Makefile.am  Makefile.in  hist-arc.cc  ngram-absolute.cc  ngram-context.cc  ngram-count-prune.cc  ngram-count.cc  ngram-input.cc  ngram-kneser-ney.cc  ngram-list-prune.cc  ngram-make.cc  ngram-marginalize.cc  ngram-output.cc  ngram-shrink.cc  util.cc
src/test/: Makefile.am  Makefile.in  disttestsetup.sh  ngramapply_test.sh  ngramcount_histograms_test.sh  ngramcount_test.sh  ngramdistcount_test.sh  ngramdistmake_test.sh  ngramdistrand.sh  ngramdistshrink_test.sh  ngramdistwittenbell_test.sh  ngramfracdistmake_test.sh  ngramfracdistshrink_test.sh  ngramhisttest-main.cc  ngramhisttest.cc  ngraminfo_test.sh  ngrammake_test.sh  ngrammarginalize_test.sh  ngrammerge_test.sh  ngramperplexity_test.sh  ngramprint_test.sh  ngramrand_test.sh  ngramrandgen_test.sh  ngramrandtest-main.cc  ngramrandtest.cc  ngramshrink_test.sh  ngramsymbols_test.sh
